2008-07-28  Jens Granseuer  <jensgr@gmx.net>

	* sound-theme.c: (load_index_theme_name),
	(set_combox_for_theme_name), (theme_combobox_changed),
	(setup_sound_theme), (get_sound_filename), (dump_theme),
	(setting_column_edited), (setup_sound_theme_custom): plug some leaks,
	simplify and/or clarify some code

2008-07-28  Jens Granseuer  <jensgr@gmx.net>

	* sound-theme.c: (custom_treeview_button_press_event_cb): don't
	preview sounds for insensitive rows

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* sound-theme.c (setting_set_func), (fill_custom_model),
	(save_sounds), (count_customised_sounds), (setting_column_edited):
	When selecting a non-custom sound (such as disabled, or builtin),
	don't remove the previous custom file's filename from the tree store,
	When a custom file was previously selected, always show it in the
	combo box drop-down (Closes: #545055)

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* sound-theme.c (play_sound_preview), (get_sound_filename):
	When selecting custom files, listen to "update-preview", and try
	to play everything that the user might select (Closes: #545056)

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* sound-theme.c (save_custom_theme): Fix permissions on the
	custom theme directory, otherwise not even the user can read the files
	in there

2008-07-28  Lennart Poettering  <lennart@poettering.net>

	* sound-theme.c: pass 'cache control' property explicitly to make sure
	that the sound is never cached when it is previewed. Pass 'enable'
	property explicitly to make sure that the sound is guaranteed to be
	played, even when sound events are otherwise disabled.

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* sound-properties-capplet.c (create_dialog), (setup_dialog),
	(get_legacy_settings):
	* sound-properties.glade:
	* sound-theme-definition.h:
	* sound-theme-file-utils.[ch]:
	* sound-theme.[ch]: Remove separate bell settings tab, remove